--- a/css/variables.scss
+++ b/css/variables.scss
@@ -7,6 +7,7 @@
 
   // Header and footer, additional color to primary
   --clr-accent-700: #FFC600;
+  --clr-accent-shadow: #ffc80020;
 
   // General background and ambient colors
   --clr-neutral-1000: #ffffff;
@@ -14,6 +15,7 @@
   --clr-neutral-700: #D0D0D0;
 
   --clr-dark-700: #262729;
+  --clr-dark-500: #6F6F6F;
   --clr-shadow: #26272920;
 
   // Primary font styles
@@ -32,11 +34,11 @@
   --fs-550: 2.25rem; // 36px
   --fs-500: clamp(16px, 2rem, 32px); // 32px
   --fs-400: clamp(16px, 1.875rem, 30px);
-  --fs-300: clamp(16px, 1.5rem, 24px); // 24px
-  --fs-100: 1rem;
-  --fs-50: 0.875rem; // 10px
+  --fs-300: clamp(16px, 1.25rem, 20px); // 20px
+  --fs-100: 1rem; // 16px
+  --fs-50: 0.875rem; // 14px
 
-  --inline-padding: clamp(20px, 8.125rem, 130px);
+  --inline-padding: clamp(20px, 5vw, 130px);
 }
 
 //Utilities
