--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ ol[role=list] {
 
 html {
   width: 100vw;
-  font-size: clamp(8px, 2vw, 16px);
+  font-size: clamp(12px, 1.5vw, 16px);
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -221,12 +221,14 @@ svg {
     scroll-behavior: auto !important;
   }
 }
-main {
+.header-middle, .header-bottom-wrapper, .header-top {
   margin: 0 auto;
   max-width: 1560px;
 }
 
 .container {
+  margin: 0 auto;
+  max-width: 1560px;
   padding-inline: var(--inline-padding);
 }
 
@@ -255,6 +257,11 @@ header {
   font-size: var(--fs-50);
 }
 
+.header-top-wrapper {
+  width: 100vw;
+  background: var(--clr-primary-900);
+}
+
 .header-top {
   display: flex;
   justify-content: space-between;
@@ -263,7 +270,6 @@ header {
   flex-wrap: nowrap;
   padding: 9px var(--inline-padding);
   width: 100%;
-  background: var(--clr-primary-900);
   color: var(--clr-neutral-1000);
   font-weight: var(--fw-small);
 }
@@ -317,7 +323,7 @@ header {
 }
 .selectable svg {
   display: inline-block;
-  margin: 0 0 3px 5px;
+  margin: 0 0 2px 0;
   transition: 0.2s ease;
 }
 .selectable .options-holder {
@@ -364,7 +370,7 @@ header {
 
 .language-option {
   display: inline-block;
-  min-width: 30px;
+  min-width: 1.875rem;
   text-transform: uppercase;
   margin: 5px 0;
   transition: 0.2s ease;
@@ -394,6 +400,7 @@ header {
   outline: none;
   border: 1px solid var(--clr-neutral-700);
   border-radius: 5px;
+  width: 13.375rem;
 }
 .search button {
   display: block;
