--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ ol[role="list"] {
 
 html {
   width: 100vw;
-  font-size: clamp(8px, 2vw, 16px);
+  font-size: clamp(12px, 1.5vw, 16px);
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -82,12 +82,14 @@ svg {
 
 // Reseting done
 
-main {
+.header-middle, .header-bottom-wrapper, .header-top {
   margin: 0 auto;
   max-width: 1560px;
 }
 
 .container {
+  margin: 0 auto;
+  max-width: 1560px;
   padding-inline: var(--inline-padding);
 }
 
@@ -116,11 +118,15 @@ header {
   font-size: var(--fs-50);
 }
 
+.header-top-wrapper {
+  width: 100vw;
+  background: var(--clr-primary-900);
+}
+
 .header-top {
   @include flex(space-between, center);
   padding: 9px var(--inline-padding);
   width: 100%;
-  background: var(--clr-primary-900);
   color: var(--clr-neutral-1000);
   font-weight: var(--fw-small);
   a {
@@ -167,7 +173,7 @@ header {
   position: relative;
   svg {
     display: inline-block;
-    margin: 0 0 3px 5px;
+    margin: 0 0 2px 0;
     transition: 0.2s ease;
   }
   .options-holder {
@@ -217,7 +223,7 @@ header {
 
 .language-option {
   display: inline-block;
-  min-width: 30px;
+  min-width: 1.875rem;
   text-transform: uppercase;
   margin: 5px 0;
   transition: 0.2s ease;
@@ -245,6 +251,7 @@ header {
     outline: none;
     border: 1px solid var(--clr-neutral-700);
     border-radius: 5px;
+    width: 13.375rem;
   }
   button {
     display: block;
