--- a/css/main.css
+++ b/css/main.css
@@ -69,11 +69,11 @@
 }
 
 .g10 {
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .g20 {
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .g40 {
@@ -81,7 +81,7 @@
 }
 
 .mY10 {
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 .center {
@@ -148,6 +148,11 @@
   position: relative;
 }
 
+@media screen and (max-width: 500px) {
+  :root {
+    --fs-700: 2.75rem;
+  }
+}
 *,
 *::before,
 *::after {
@@ -169,7 +174,6 @@ html {
   width: 100vw;
   font-size: clamp(12px, 1.5vw, 16px);
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 html,
@@ -177,6 +181,12 @@ body {
   font-family: var(--ff-primary);
   position: relative;
   color: var(--clr-dark-700);
+  overflow-x: hidden;
+}
+
+html.locked {
+  height: 100%;
+  overflow-y: hidden;
 }
 
 body {
@@ -252,6 +262,10 @@ svg {
   transform: scaleX(1);
 }
 
+.header-wrapper {
+  transition: 0.2s ease;
+}
+
 header {
   width: 100%;
   font-size: var(--fs-50);
@@ -266,12 +280,64 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   padding: 9px var(--inline-padding);
   width: 100%;
   color: var(--clr-neutral-1000);
   font-weight: var(--fw-small);
+  gap: 1.25rem;
+}
+.header-top .actual-header-top, .header-top .small-nav {
+  gap: 0.625rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.header-top .small-nav {
+  display: none;
+}
+.header-top .small-nav img {
+  width: 3.125rem;
+}
+.header-top .small-nav .hamburger-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  background: none;
+  outline: none;
+  border: none;
+  padding: 5px;
+  margin: 0;
+  cursor: pointer;
+  height: 30px;
+}
+.header-top .small-nav .hamburger-wrapper .hamburger {
+  position: relative;
+  width: 20px;
+  height: 2px;
+  background-color: var(--clr-neutral-1000);
+  transition: 0.2s ease;
+}
+.header-top .small-nav .hamburger-wrapper .hamburger::after, .header-top .small-nav .hamburger-wrapper .hamburger::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-neutral-1000);
+  position: absolute;
+  left: 0;
+  transition: 0.2s ease;
+}
+.header-top .small-nav .hamburger-wrapper .hamburger::after {
+  bottom: -7px;
+}
+.header-top .small-nav .hamburger-wrapper .hamburger::before {
+  top: -7px;
 }
 .header-top a {
   position: relative;
@@ -283,15 +349,36 @@ header {
   color: var(--clr-accent-700);
 }
 
+.header-wrapper.open {
+  height: 150vh;
+  overflow-y: scroll;
+}
+.header-wrapper.open .header-top .small-nav .hamburger-wrapper .hamburger {
+  background-color: transparent;
+}
+.header-wrapper.open .header-top .small-nav .hamburger-wrapper .hamburger::after {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+.header-wrapper.open .header-top .small-nav .hamburger-wrapper .hamburger::before {
+  top: 0;
+  transform: rotate(-45deg);
+}
+
+.logo-image {
+  width: 5.8125rem;
+}
+
 .header-middle {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap-reverse;
   padding: 20px var(--inline-padding);
   font-weight: var(--fw-normal);
+  gap: 0.625rem;
 }
 .header-middle-info a:not(.inline) {
   display: block;
@@ -310,12 +397,6 @@ header {
   flex-direction: row;
   flex-wrap: nowrap;
   gap: 5px;
-}
-.header-middle-info.contact3 img {
-  display: block;
-}
-.header-middle-info.contact3 a {
-  display: inline;
 }
 
 .selectable {
@@ -467,13 +548,9 @@ header {
 .header-bottom .selectable .forStudent {
   max-width: 310px;
 }
-.header-bottom .selectable .forStudent .header-bottom-option {
-  min-width: 310px;
-  width: 100%;
-}
 .header-bottom .selectable .header-bottom-option {
   display: inline-block;
-  min-width: 330px;
+  min-width: 19.5rem;
   margin: 5px 0;
   padding-left: 20px;
   transition: 0.2s ease;
@@ -541,6 +618,65 @@ header {
   transform: rotate(45deg);
 }
 
+@media screen and (max-width: 760px) {
+  .contact1 a:not(.mailLink) {
+    margin-bottom: 5px;
+  }
+}
+@media screen and (max-width: 690px) {
+  .header-wrapper {
+    height: 55px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+  .header-wrapper .header-top-wrapper {
+    transition: 0.2s ease;
+    transition-delay: 0.5s ease;
+    background-color: rgba(56, 91, 173, 0.4392156863);
+    -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
+  }
+  .header-wrapper.open {
+    background: var(--clr-neutral-1000);
+  }
+  .header-wrapper.open .header-top-wrapper {
+    background-color: var(--clr-primary-900);
+  }
+  .selectable .student-options {
+    padding-right: 30px !important;
+    flex-direction: column;
+  }
+  .header-top .small-nav {
+    display: flex;
+  }
+  .logo-image {
+    display: none;
+  }
+  .header-top .actual-header-top, .header-bottom {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header-bottom {
+    border-top: none;
+    border-bottom: 1px solid var(--clr-neutral-700);
+    gap: 1.25rem;
+  }
+  .header-bottom span, .header-bottom .just-link {
+    font-size: var(--fs-100);
+  }
+}
+@media screen and (max-width: 430px) {
+  .search {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+  .search input {
+    width: 100%;
+  }
+}
 .hero {
   display: flex;
   justify-content: center;
@@ -556,6 +692,9 @@ header {
   color: var(--clr-neutral-1000);
   text-align: center;
   font-weight: var(--fw-bold);
+}
+.hero .fs-700 {
+  padding: 0 10px;
 }
 
 .quickActions {
