--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,9 @@
     color: var(--clr-neutral-1000);
     text-align: center;
     font-weight: var(--fw-bold);
+    .fs-700 {
+        padding: 0 10px;
+    }
 }
 
 .quickActions {
