--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,6 @@ html {
   width: 100vw;
   font-size: clamp(12px, 1.5vw, 16px);
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 html,
@@ -33,6 +32,12 @@ body {
   font-family: var(--ff-primary);
   position: relative;
   color: var(--clr-dark-700);
+  overflow-x: hidden;
+}
+
+html.locked {
+  height: 100%;
+  overflow-y: hidden;
 }
 
 // Set core body defaults
@@ -113,6 +118,10 @@ svg {
   }
 }
 
+.header-wrapper {
+  transition: 0.2s ease;
+}
+
 header {
   width: 100%;
   font-size: var(--fs-50);
@@ -124,11 +133,55 @@ header {
 }
 
 .header-top {
-  @include flex(space-between, center);
+  @include flex(space-between, center, nowrap, column);
   padding: 9px var(--inline-padding);
   width: 100%;
   color: var(--clr-neutral-1000);
   font-weight: var(--fw-small);
+  gap: 1.25rem;
+  .actual-header-top, .small-nav {
+    gap: 0.625rem;
+    width: 100%;
+    @include flex(space-between, center);
+  }
+  .small-nav {
+    display: none;
+    img {
+      width: 3.125rem;
+    }
+    .hamburger-wrapper {
+      @include flex();
+      background: none;
+      outline: none;
+      border: none;
+      padding: 5px;
+      margin: 0;
+      cursor: pointer;
+      height: 30px;
+      .hamburger {
+        position: relative;
+        width: 20px;
+        height: 2px;
+        background-color: var(--clr-neutral-1000);
+        transition: 0.2s ease;
+        &::after, &::before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-color: var(--clr-neutral-1000);
+          position: absolute;
+          left: 0;
+          transition: 0.2s ease;
+        }
+        &::after {
+          bottom: -7px;
+        }
+        &::before {
+          top: -7px;
+        }
+      }
+    }
+  }
   a {
     position: relative;
     color: var(--clr-neutral-1000);
@@ -140,11 +193,32 @@ header {
   }
 }
 
+.header-wrapper.open {
+  height: 150vh;
+  overflow-y: scroll;
+  .header-top .small-nav .hamburger-wrapper .hamburger {
+    background-color: transparent;
+    &::after {
+      bottom: 0;
+      transform: rotate(45deg);
+    }
+    &::before {
+      top: 0;
+      transform: rotate(-45deg);
+    }
+  }
+}
+
+.logo-image {
+  width: 5.8125rem;
+}
+
 .header-middle {
   width: 100%;
-  @include flex(space-between, center);
+  @include flex(space-between, center, wrap-reverse);
   padding: 20px var(--inline-padding);
   font-weight: var(--fw-normal);
+  gap: 0.625rem;
   &-info {
     a:not(.inline) {
       display: block;
@@ -159,12 +233,6 @@ header {
     &.contact3 {
       @include flex(center, center);
       gap: 5px;
-      img {
-        display: block;
-      }
-      a {
-        display: inline;
-      }
     }
   }
 }
@@ -314,14 +382,10 @@ header {
     }
     .forStudent {
       max-width: 310px;
-      .header-bottom-option {
-        min-width: 310px;
-        width: 100%;
-      }
     }
     .header-bottom-option {
       display: inline-block;
-      min-width: 330px;
+      min-width: 19.5rem;
       margin: 5px 0;
       padding-left: 20px;
       transition: 0.2s ease;
@@ -383,4 +447,66 @@ header {
       transform: rotate(45deg);
     }
   }
+}
+
+@media screen and (max-width: 760px) {
+  .contact1 a:not(.mailLink) {
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 690px) {
+  .header-wrapper {
+    height: 55px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    .header-top-wrapper {
+      transition: 0.2s ease;
+      transition-delay: 0.5s ease;
+      background-color: #385bad70;
+      backdrop-filter: blur(20px);
+    }
+    
+    &.open {
+      background: var(--clr-neutral-1000);
+      .header-top-wrapper {
+        background-color: var(--clr-primary-900);
+      }
+    }
+  }
+  .selectable .student-options {
+    padding-right: 30px !important;
+    flex-direction: column;
+  }
+  .header-top .small-nav {
+    display: flex;
+  }
+  .logo-image {
+    display: none;
+  }
+  .header-top .actual-header-top, .header-bottom {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header-bottom {
+    border-top: none;
+    border-bottom: 1px solid var(--clr-neutral-700);
+    gap: 1.25rem;
+    span, .just-link {
+      font-size: var(--fs-100);
+    }
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .search{
+    margin-bottom: 10px;
+    width: 100%;
+    input {
+      width: 100%;
+    }
+  } 
 }
