--- a/css/variables.css
+++ b/css/variables.css
@@ -69,11 +69,11 @@
 }
 
 .g10 {
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .g20 {
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .g40 {
@@ -81,7 +81,7 @@
 }
 
 .mY10 {
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 .center {
@@ -146,4 +146,10 @@
 
 .pos-rel {
   position: relative;
+}
+
+@media screen and (max-width: 500px) {
+  :root {
+    --fs-700: 2.75rem;
+  }
 }/*# sourceMappingURL=variables.css.map */
