--- a/css/variables.scss
+++ b/css/variables.scss
@@ -80,11 +80,11 @@
 }
 
 .g10 {
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .g20 {
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .g40 {
@@ -92,7 +92,7 @@
 }
 
 .mY10 {
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 .center {
@@ -157,4 +157,10 @@
 
 .pos-rel {
   position: relative;
+}
+
+@media screen and (max-width: 500px) {
+  :root {
+    --fs-700: 2.75rem;
+  }
 }
