--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 :root {
   --clr-primary-900: #385CAD;
   --clr-primary-700: #00B2E3;
@@ -53,6 +53,10 @@
 
 .spb.ais {
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+.ais {
   align-items: flex-start;
 }
 
