--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 :root {
   --clr-primary-900: #385CAD;
   --clr-primary-700: #00B2E3;
@@ -53,6 +53,10 @@
 
 .spb.ais {
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+.ais {
   align-items: flex-start;
 }
 
@@ -611,10 +615,10 @@ header {
 .link.primary {
   color: var(--clr-primary-900);
 }
-.link svg {
+.link svg, .link img {
   transition: 0.2s ease;
 }
-.link:hover svg {
+.link:hover svg, .link:hover img {
   transform: rotate(45deg);
 }
 
@@ -635,7 +639,7 @@ header {
   .header-wrapper .header-top-wrapper {
     transition: 0.2s ease;
     transition-delay: 0.5s ease;
-    background-color: rgba(56, 91, 173, 0.4392156863);
+    background-color: rgba(56, 91, 173, 0.6392156863);
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
   }
@@ -725,18 +729,20 @@ header {
 .news {
   padding-inline: var(--inline-padding);
 }
-.news .fs-500 {
+
+.block-title {
+  font-size: var(--fs-500);
   color: var(--clr-primary-900);
   position: relative;
 }
-.news .fs-500::after {
+.block-title::after {
   content: "";
   width: 100vw;
   height: 1px;
   background-color: var(--clr-primary-900);
   position: absolute;
   bottom: 0;
-  right: -30px;
+  right: -15%;
 }
 
 .news-block-wrapper {
@@ -789,20 +795,76 @@ header {
 
 .director-block-wrapper {
   position: relative;
+  margin-bottom: 8.125rem;
 }
 .director-block-wrapper::before {
+  content: "";
+  z-index: -1;
   width: 100vw;
-  height: 80%;
+  height: calc(100% - 2.5rem);
   position: absolute;
-  background: var(--clr-neutral-700);
+  background: #F8F8F8;
 }
 
 .director-block {
-  padding-inline: var(--inline-padding);
+  position: relative;
+}
+.director-block img {
+  flex: 1;
+  width: clamp(240px, 40%, 480px);
+}
+.director-block-info {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding: 3.125rem 20px 20px 3.125rem;
+  min-width: 280px;
+}
+.director-block-info .title {
+  position: relative;
+  font-size: var(--fs-500);
+  color: var(--clr-primary-900);
+  font-weight: var(--fw-medium);
+  margin-bottom: 3.4rem;
+}
+.director-block-info .title::after {
+  content: "";
+  position: absolute;
+  bottom: -0.9375rem;
+  right: -50%;
+  width: 200%;
+  height: 1px;
+  background-color: var(--clr-primary-900);
+  z-index: -1;
+}
+.director-block-info .descr {
+  font-weight: var(--fw-semi-medium);
+  margin-bottom: 1.25rem;
+}
+.director-block-info .text {
+  font-size: var(--fs-50);
+  font-weight: var(--fw-small);
+  margin-bottom: 1.875rem;
+}
+.director-block-info .link {
+  color: var(--clr-primary-900);
 }
 
 @media screen and (max-width: 1045px) {
   .news-block-wrapper {
     justify-content: center;
+  }
+}
+@media screen and (max-width: 1220px) {
+  .director-block-wrapper::before {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 577px) {
+  .director-block .director-block-info {
+    padding: 2rem 0;
   }
 }/*# sourceMappingURL=main.css.map */
