--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 :root {
   --clr-primary-900: #385CAD;
   --clr-primary-700: #00B2E3;
@@ -53,6 +53,10 @@
 
 .spb.ais {
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+.ais {
   align-items: flex-start;
 }
 
@@ -611,10 +615,10 @@ header {
 .link.primary {
   color: var(--clr-primary-900);
 }
-.link svg {
+.link svg, .link img {
   transition: 0.2s ease;
 }
-.link:hover svg {
+.link:hover svg, .link:hover img {
   transform: rotate(45deg);
 }
 
@@ -635,7 +639,7 @@ header {
   .header-wrapper .header-top-wrapper {
     transition: 0.2s ease;
     transition-delay: 0.5s ease;
-    background-color: rgba(56, 91, 173, 0.4392156863);
+    background-color: rgba(56, 91, 173, 0.6392156863);
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
   }
