--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 :root {
   // Buttons and highlights, main color of the site
@@ -64,6 +64,10 @@
 
 .spb.ais {
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+.ais {
   align-items: flex-start;
 }
 
