--- a/css/variables.scss
+++ b/css/variables.scss
@@ -37,6 +37,7 @@
   --fs-300: clamp(16px, 1.25rem, 20px); // 20px
   --fs-100: 1rem; // 16px
   --fs-50: 0.875rem; // 14px
+  --fs-25: 12px;
 
   --inline-padding: clamp(20px, 5vw, 130px);
 }
