--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
   --fs-300: clamp(16px, 1.25rem, 20px);
   --fs-100: 1rem;
   --fs-50: 0.875rem;
+  --fs-25: 12px;
   --inline-padding: clamp(20px, 5vw, 130px);
 }
 
@@ -611,9 +612,28 @@ header {
   flex-wrap: nowrap;
   gap: 10px;
   cursor: pointer;
+  position: relative;
+}
+.link::after {
+  content: "";
+  height: 1px;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  background-color: var(--clr-dark-700);
+  opacity: 0;
+  transition: 0.2s ease;
+}
+.link:hover::after {
+  opacity: 1;
+  bottom: 0;
 }
 .link.primary {
   color: var(--clr-primary-900);
+}
+.link.primary::after {
+  background-color: var(--clr-primary-900);
 }
 .link svg, .link img {
   transition: 0.2s ease;
@@ -622,6 +642,142 @@ header {
   transform: rotate(45deg);
 }
 
+main {
+  margin-bottom: 8.125rem;
+}
+
+footer {
+  background: var(--clr-primary-900);
+  color: var(--clr-neutral-1000);
+  font-size: var(--fs-50);
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+}
+footer .logo {
+  flex: 1;
+  min-height: 100px;
+}
+footer .logo img {
+  width: clamp(100px, 100%, 180px);
+}
+footer .footer-contacts {
+  width: 100%;
+  gap: 2rem;
+  position: relative;
+  padding-bottom: 1.875rem;
+  margin-bottom: 1.875rem;
+}
+footer .footer-contacts::after {
+  content: "";
+  width: 200%;
+  height: 1px;
+  background-color: var(--clr-neutral-1000);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+footer .info-wrapper {
+  flex: 5;
+  width: 100%;
+  max-width: 1200px;
+}
+footer .contact a:not(.inline) {
+  display: block;
+  margin: 5px 0 0 20px;
+}
+footer .contact a {
+  --color: var(--clr-neutral-1000);
+  color: var(--clr-neutral-1000);
+}
+footer .contact img {
+  display: inline-block;
+}
+footer .contact.flex.start {
+  gap: 3px;
+}
+footer .contact.flex.start img {
+  margin-top: 3px;
+}
+
+.footer-nav {
+  width: 100%;
+  gap: 2rem;
+}
+.footer-nav .footer-title {
+  color: var(--clr-accent-700);
+  font-weight: var(--fw-semi-medium);
+  font-size: var(--fs-100);
+  margin-bottom: 0.625rem;
+}
+.footer-nav ul {
+  padding: 0;
+  margin: 0;
+}
+.footer-nav ul li {
+  list-style: none;
+  margin-bottom: 0.625rem;
+}
+.footer-nav ul a {
+  position: relative;
+  color: var(--clr-neutral-1000);
+  list-style: none;
+}
+.footer-nav ul a::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  background-color: var(--clr-neutral-1000);
+  transform: scaleX(0);
+  transition: 0.2s ease;
+}
+.footer-nav ul a:hover::after {
+  transform: scaleX(1);
+}
+.footer-nav .nav-lists {
+  gap: 4rem;
+}
+
+.socialMedia {
+  text-align: end;
+  margin-left: auto;
+  margin-top: 3.125rem;
+}
+.socialMedia .flex {
+  margin-top: 0.625rem;
+  gap: 0.625rem;
+}
+.socialMedia .flex img {
+  width: 22px;
+}
+.socialMedia .flex a {
+  transition: 0.2s ease;
+}
+.socialMedia .flex a:hover {
+  transform: scale(1.2);
+}
+
+.terms {
+  text-align: end;
+  margin-top: 1.875rem;
+  font-size: var(--fs-25);
+  margin-left: auto;
+}
+
+.footer-building {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: clamp(300px, 50%, 600px);
+}
+
+@media screen and (max-width: 877px) {
+  footer {
+    padding-bottom: calc(3.875rem + 70px);
+  }
+}
 @media screen and (max-width: 760px) {
   .contact1 a:not(.mailLink) {
     margin-bottom: 5px;
@@ -656,7 +812,7 @@ header {
   .header-top .small-nav {
     display: flex;
   }
-  .logo-image {
+  footer .logo, .logo-image {
     display: none;
   }
   .header-top .actual-header-top, .header-bottom {
@@ -751,7 +907,8 @@ header {
   align-items: stretch;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 40px 0;
+  margin: 2.5rem 0;
+  margin-bottom: 8.125rem;
   gap: 1.25rem;
 }
 .news-block-wrapper .news-block {
@@ -853,8 +1010,73 @@ header {
   color: var(--clr-primary-900);
 }
 
-@media screen and (max-width: 1045px) {
-  .news-block-wrapper {
+.instagram-block {
+  margin-bottom: 8.125rem;
+}
+.instagram-block .insta-blocks {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.instagram-block .insta-blocks .block {
+  width: clamp(300px, 100%, 380px);
+  border: 3px solid transparent;
+  transition: 0.2s ease;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.instagram-block .insta-blocks .block img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.instagram-block .insta-blocks .block:hover {
+  border-color: var(--clr-primary-900);
+}
+
+.partners-block-wrapper {
+  margin-top: 3.5rem;
+  gap: 1.25rem;
+}
+
+.partners-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: clamp(280px, 100%, 380px);
+  min-width: 300px;
+  min-height: 150px;
+  background: var(--clr-neutral-1000);
+  box-shadow: 0 0 10px var(--clr-shadow);
+  border-radius: 10px;
+  border: 1px solid transparent;
+  transition: 0.2s ease;
+}
+.partners-block:hover {
+  box-shadow: 0 0 0 transparent;
+  border-color: var(--clr-dark-500);
+}
+
+.textInTheEnd {
+  width: 100%;
+  text-align: end;
+  position: relative;
+  top: -50px;
+}
+.textInTheEnd span {
+  width: clamp(300px, 30%, 600px);
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1303px) {
+  .instagram-block .insta-blocks {
     justify-content: center;
   }
 }
@@ -863,7 +1085,27 @@ header {
     height: 100%;
   }
 }
+@media screen and (max-width: 1045px) {
+  .news-block-wrapper {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 1084px) {
+  .textInTheEnd {
+    margin: 3rem 0;
+    position: static;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 863px) {
+  .partners-blocks .partners-block-wrapper {
+    justify-content: center;
+  }
+}
 @media screen and (max-width: 577px) {
+  .dn577 {
+    display: none;
+  }
   .director-block .director-block-info {
     padding: 2rem 0;
   }
