--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
   --fs-300: clamp(16px, 1.25rem, 20px);
   --fs-100: 1rem;
   --fs-50: 0.875rem;
+  --fs-25: 12px;
   --inline-padding: clamp(20px, 5vw, 130px);
 }
 
@@ -611,9 +612,28 @@ header {
   flex-wrap: nowrap;
   gap: 10px;
   cursor: pointer;
+  position: relative;
+}
+.link::after {
+  content: "";
+  height: 1px;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  background-color: var(--clr-dark-700);
+  opacity: 0;
+  transition: 0.2s ease;
+}
+.link:hover::after {
+  opacity: 1;
+  bottom: 0;
 }
 .link.primary {
   color: var(--clr-primary-900);
+}
+.link.primary::after {
+  background-color: var(--clr-primary-900);
 }
 .link svg, .link img {
   transition: 0.2s ease;
@@ -622,6 +642,142 @@ header {
   transform: rotate(45deg);
 }
 
+main {
+  margin-bottom: 8.125rem;
+}
+
+footer {
+  background: var(--clr-primary-900);
+  color: var(--clr-neutral-1000);
+  font-size: var(--fs-50);
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+}
+footer .logo {
+  flex: 1;
+  min-height: 100px;
+}
+footer .logo img {
+  width: clamp(100px, 100%, 180px);
+}
+footer .footer-contacts {
+  width: 100%;
+  gap: 2rem;
+  position: relative;
+  padding-bottom: 1.875rem;
+  margin-bottom: 1.875rem;
+}
+footer .footer-contacts::after {
+  content: "";
+  width: 200%;
+  height: 1px;
+  background-color: var(--clr-neutral-1000);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+footer .info-wrapper {
+  flex: 5;
+  width: 100%;
+  max-width: 1200px;
+}
+footer .contact a:not(.inline) {
+  display: block;
+  margin: 5px 0 0 20px;
+}
+footer .contact a {
+  --color: var(--clr-neutral-1000);
+  color: var(--clr-neutral-1000);
+}
+footer .contact img {
+  display: inline-block;
+}
+footer .contact.flex.start {
+  gap: 3px;
+}
+footer .contact.flex.start img {
+  margin-top: 3px;
+}
+
+.footer-nav {
+  width: 100%;
+  gap: 2rem;
+}
+.footer-nav .footer-title {
+  color: var(--clr-accent-700);
+  font-weight: var(--fw-semi-medium);
+  font-size: var(--fs-100);
+  margin-bottom: 0.625rem;
+}
+.footer-nav ul {
+  padding: 0;
+  margin: 0;
+}
+.footer-nav ul li {
+  list-style: none;
+  margin-bottom: 0.625rem;
+}
+.footer-nav ul a {
+  position: relative;
+  color: var(--clr-neutral-1000);
+  list-style: none;
+}
+.footer-nav ul a::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  background-color: var(--clr-neutral-1000);
+  transform: scaleX(0);
+  transition: 0.2s ease;
+}
+.footer-nav ul a:hover::after {
+  transform: scaleX(1);
+}
+.footer-nav .nav-lists {
+  gap: 4rem;
+}
+
+.socialMedia {
+  text-align: end;
+  margin-left: auto;
+  margin-top: 3.125rem;
+}
+.socialMedia .flex {
+  margin-top: 0.625rem;
+  gap: 0.625rem;
+}
+.socialMedia .flex img {
+  width: 22px;
+}
+.socialMedia .flex a {
+  transition: 0.2s ease;
+}
+.socialMedia .flex a:hover {
+  transform: scale(1.2);
+}
+
+.terms {
+  text-align: end;
+  margin-top: 1.875rem;
+  font-size: var(--fs-25);
+  margin-left: auto;
+}
+
+.footer-building {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: clamp(300px, 50%, 600px);
+}
+
+@media screen and (max-width: 877px) {
+  footer {
+    padding-bottom: calc(3.875rem + 70px);
+  }
+}
 @media screen and (max-width: 760px) {
   .contact1 a:not(.mailLink) {
     margin-bottom: 5px;
@@ -656,7 +812,7 @@ header {
   .header-top .small-nav {
     display: flex;
   }
-  .logo-image {
+  footer .logo, .logo-image {
     display: none;
   }
   .header-top .actual-header-top, .header-bottom {
