--- a/css/style.scss
+++ b/css/style.scss
@@ -436,8 +436,27 @@ header {
   @include flex();
   gap: 10px;
   cursor: pointer;
+  position: relative;
+  &::after {
+    content: "";
+    height: 1px;
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    background-color: var(--clr-dark-700);
+    opacity: 0;
+    transition: 0.2s ease;
+  }
+  &:hover::after {
+    opacity: 1;
+    bottom: 0;
+  }
   &.primary {
     color: var(--clr-primary-900);
+    &::after {
+      background-color: var(--clr-primary-900);
+    }
   }
   svg, img {
     transition: 0.2s ease;
@@ -447,6 +466,145 @@ header {
       transform: rotate(45deg);
     }
   }
+}
+
+main {
+  margin-bottom: 8.125rem;
+}
+
+footer {
+  background: var(--clr-primary-900);
+  color: var(--clr-neutral-1000);
+  font-size: var(--fs-50);
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+  .logo {
+    flex: 1;
+    min-height: 100px;
+  }
+  .logo img {
+    width: clamp(100px, 100%, 180px);
+  }
+  .footer-contacts {
+    width: 100%;
+    gap: 2rem;
+    position: relative;
+    padding-bottom: 1.875rem;
+    margin-bottom: 1.875rem;
+    &::after {
+      content: "";
+      width: 200%;
+      height: 1px;
+      background-color: var(--clr-neutral-1000);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  }
+  .info-wrapper {
+    flex: 5;
+    width: 100%;
+    max-width: 1200px;
+  }
+  .contact {
+    a:not(.inline) {
+      display: block;
+      margin: 5px 0 0 20px;
+    }
+    a {
+      --color: var(--clr-neutral-1000);
+      color: var(--clr-neutral-1000);
+    }
+    img {
+      display: inline-block;
+    }
+    &.flex.start {
+      gap: 3px;
+      img {
+        margin-top: 3px;
+      }
+    }
+  }
+}
+
+.footer-nav {
+  width: 100%;
+  gap: 2rem;
+  .footer-title {
+    color: var(--clr-accent-700);
+    font-weight: var(--fw-semi-medium);
+    font-size: var(--fs-100);
+    margin-bottom: 0.625rem;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
+    li {
+      list-style: none;
+      margin-bottom: 0.625rem;
+    }
+    a {
+      position: relative;
+      color: var(--clr-neutral-1000);
+      list-style: none;
+      &::after {
+        content: "";
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        bottom: -3px;
+        left: 0;
+        background-color: var(--clr-neutral-1000);
+        transform: scaleX(0);
+        transition: 0.2s ease;
+      }
+      &:hover::after {
+        transform: scaleX(1);
+      }
+    }
+  }
+  .nav-lists {
+    gap: 4rem;
+  }
+}
+
+.socialMedia {
+  text-align: end;
+  margin-left: auto;
+  margin-top: 3.125rem;
+  .flex {
+    margin-top: 0.625rem;
+    gap: 0.625rem;
+    img {
+      width: 22px;
+    }
+    a {
+      transition: 0.2s ease;
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+  }
+}
+
+.terms {
+  text-align: end;
+  margin-top: 1.875rem;
+  font-size: var(--fs-25);
+  margin-left: auto;
+}
+
+.footer-building {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: clamp(300px, 50%, 600px);
+}
+
+@media screen and (max-width: 877px) {
+  footer {
+    padding-bottom: calc(3.875rem + 70px);
+  }  
 }
 
 @media screen and (max-width: 760px) {
@@ -484,7 +642,7 @@ header {
   .header-top .small-nav {
     display: flex;
   }
-  .logo-image {
+  footer .logo, .logo-image {
     display: none;
   }
   .header-top .actual-header-top, .header-bottom {
