--- a/css/variables.scss
+++ b/css/variables.scss
@@ -31,10 +31,11 @@
  
   --fs-700: 3.25rem; // 52 px
   --fs-600: 3rem; // 48px
-  --fs-550: 2.25rem; // 36px
+  --fs-550: 2.5rem; // 40px
   --fs-500: clamp(16px, 2rem, 32px); // 32px
   --fs-400: clamp(16px, 1.875rem, 30px);
   --fs-300: clamp(16px, 1.25rem, 20px); // 20px
+  --fs-200: clamp(16px, 1.125rem, 18px); // 20px
   --fs-100: 1rem; // 16px
   --fs-50: 0.875rem; // 14px
   --fs-25: 12px;
@@ -98,6 +99,10 @@
 
 .mY10 {
   margin: 0.625rem 0;
+}
+
+.mY60 {
+  margin: 3.75rem 0;
 }
 
 .center {
